fix: don't hide the smart macro editor autocomplete popup (#2240)
Had to refactor h1 header to use padding instead of margin to remove extra scrollbars of macro page.

--- a/packages/uhk-web/src/styles/_table.scss
+++ b/packages/uhk-web/src/styles/_table.scss
@@ -13,7 +13,7 @@ table.settings {
                 width: 50%;
 
                 h3.margin-top {
-                    margin-top: 1em;
+                    padding-top: 1em;
                 }
 
                 .form-check {
